<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".register_Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="#96ffffff"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="10dp"
                    android:hint="@string/full"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/edit_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_baseline_person_24"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="2dp" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff"
            android:theme="@style/EditScreenTextInputLayoutStyle"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff"
            android:theme="@style/EditScreenTextInputLayoutStyle"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:hint="@string/user_name"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="#96ffffff"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="#96ffffff"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password_re"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="10dp"
                    android:hint="@string/r_password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/date_baker_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Birthdate"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#FFFFFF"
            android:contextClickable="true"
            android:entries="@array/contre"
            android:padding="10dp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/Female" />

        </RadioGroup>


        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/pink"
            android:text="@string/save"
            android:textColor="@color/white" />
    </LinearLayout>


</RelativeLayout>