<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shep2"
    tools:context=".Login_Activity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />


            <EditText
                android:id="@+id/user_name_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/shep"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/shep"
                android:gravity="center|start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_name_login" />


            <Button
                android:id="@+id/login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/shep_botten"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/register"
                app:layout_constraintHorizontal_bias="0.008"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_login" />

            <Button
                android:id="@+id/register"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/shep_botten"
                android:text="@string/register"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.99"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_login"
                app:layout_constraintVertical_bias="0.0" />

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login">


                <CheckBox
                    android:id="@+id/remember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:buttonTint="#FFFFFF"
                    android:checked="true"
                    android:filterTouchesWhenObscured="false"
                    android:text="@string/remember"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FF0000"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>